--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </a>
                 
                 <!-- Portfolio item 06 -->
-                <a href="https://github.com/SmileyShivam/view-lyrics" class="portfolio__item">
+                <a href="https://view-lyrics.netlify.app/" class="portfolio__item">
                     <img src="projects-7.png" alt="" class="portfolio__img">
                 </a>
                 
