--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             
             <div class="portfolio">
                 <!-- Portfolio item 01 -->
-                <a href="http://react-memories-app.netlify.app/" class="portfolio__item">
+                <a href="https://react-memories-creator.netlify.app/" class="portfolio__item">
                     <img src="projects-1.png" alt="" class="portfolio__img">
                 </a>
                 
